--- a/src/output.css
+++ b/src/output.css
@@ -11,6 +11,7 @@
     --color-red-500: oklch(63.7% 0.237 25.331);
     --color-red-600: oklch(57.7% 0.245 27.325);
     --color-red-700: oklch(50.5% 0.213 27.518);
+    --color-yellow-300: oklch(90.5% 0.182 98.111);
     --color-yellow-400: oklch(85.2% 0.199 91.936);
     --color-cyan-50: oklch(98.4% 0.019 200.873);
     --color-gray-50: oklch(98.5% 0.002 247.839);
@@ -44,7 +45,6 @@
     --font-weight-bold: 700;
     --font-weight-extrabold: 800;
     --tracking-wider: 0.05em;
-    --radius-lg: 0.5rem;
     --drop-shadow-sm: 0 1px 2px rgb(0 0 0 / 0.15);
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --default-transition-duration: 150ms;
@@ -331,6 +331,9 @@
   .mx-4 {
     margin-inline: calc(var(--spacing) * 4);
   }
+  .my-2 {
+    margin-block: calc(var(--spacing) * 2);
+  }
   .mt-0 {
     margin-top: calc(var(--spacing) * 0);
   }
@@ -448,6 +451,9 @@
   .w-3 {
     width: calc(var(--spacing) * 3);
   }
+  .w-3\.5 {
+    width: calc(var(--spacing) * 3.5);
+  }
   .w-4 {
     width: calc(var(--spacing) * 4);
   }
@@ -534,6 +540,12 @@
   }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
+  }
+  .cursor-alias {
+    cursor: alias;
+  }
+  .cursor-not-allowed {
+    cursor: not-allowed;
   }
   .cursor-pointer {
     cursor: pointer;
@@ -813,6 +825,12 @@
   .bg-white {
     background-color: var(--color-white);
   }
+  .bg-yellow-300 {
+    background-color: var(--color-yellow-300);
+  }
+  .bg-yellow-400 {
+    background-color: var(--color-yellow-400);
+  }
   .object-contain {
     object-fit: contain;
   }
@@ -864,6 +882,9 @@
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
   }
+  .pt-0 {
+    padding-top: calc(var(--spacing) * 0);
+  }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
   }
@@ -876,6 +897,12 @@
   .pb-3 {
     padding-bottom: calc(var(--spacing) * 3);
   }
+  .pb-4 {
+    padding-bottom: calc(var(--spacing) * 4);
+  }
+  .pb-5 {
+    padding-bottom: calc(var(--spacing) * 5);
+  }
   .pl-1 {
     padding-left: calc(var(--spacing) * 1);
   }
@@ -884,6 +911,15 @@
   }
   .pl-3 {
     padding-left: calc(var(--spacing) * 3);
+  }
+  .pl-4 {
+    padding-left: calc(var(--spacing) * 4);
+  }
+  .pl-5 {
+    padding-left: calc(var(--spacing) * 5);
+  }
+  .pl-10 {
+    padding-left: calc(var(--spacing) * 10);
   }
   .text-center {
     text-align: center;
@@ -1118,13 +1154,6 @@
       }
     }
   }
-  .group-hover\:cursor-pointer {
-    &:is(:where(.group):hover *) {
-      @media (hover: hover) {
-        cursor: pointer;
-      }
-    }
-  }
   .group-hover\:border-primary-color {
     &:is(:where(.group):hover *) {
       @media (hover: hover) {
@@ -1136,6 +1165,13 @@
     &:is(:where(.group):hover *) {
       @media (hover: hover) {
         background-color: var(--color-grey-eight);
+      }
+    }
+  }
+  .group-hover\:text-yellow-400 {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        color: var(--color-yellow-400);
       }
     }
   }
@@ -1520,6 +1556,11 @@
       color: var(--color-dark-primary-color);
     }
   }
+  .dark\:text-grey-four {
+    &:where(.dark, .dark *) {
+      color: var(--color-grey-four);
+    }
+  }
   .dark\:text-grey-seven {
     &:where(.dark, .dark *) {
       color: var(--color-grey-seven);
@@ -1528,6 +1569,16 @@
   .dark\:text-grey-six {
     &:where(.dark, .dark *) {
       color: var(--color-grey-six);
+    }
+  }
+  .dark\:text-grey-three {
+    &:where(.dark, .dark *) {
+      color: var(--color-grey-three);
+    }
+  }
+  .dark\:text-grey-two {
+    &:where(.dark, .dark *) {
+      color: var(--color-grey-two);
     }
   }
   .dark\:text-white {
@@ -1614,6 +1665,24 @@
       &:hover {
         @media (hover: hover) {
           color: var(--color-dark-primary-color);
+        }
+      }
+    }
+  }
+  .dark\:hover\:text-yellow-300 {
+    &:where(.dark, .dark *) {
+      &:hover {
+        @media (hover: hover) {
+          color: var(--color-yellow-300);
+        }
+      }
+    }
+  }
+  .dark\:hover\:text-yellow-400 {
+    &:where(.dark, .dark *) {
+      &:hover {
+        @media (hover: hover) {
+          color: var(--color-yellow-400);
         }
       }
     }
