--- a/src/output.css
+++ b/src/output.css
@@ -322,6 +322,9 @@
   .row-span-2 {
     grid-row: span 2 / span 2;
   }
+  .row-span-4 {
+    grid-row: span 4 / span 4;
+  }
   .m-0 {
     margin: calc(var(--spacing) * 0);
   }
@@ -330,9 +333,6 @@
   }
   .mx-4 {
     margin-inline: calc(var(--spacing) * 4);
-  }
-  .my-2 {
-    margin-block: calc(var(--spacing) * 2);
   }
   .mt-0 {
     margin-top: calc(var(--spacing) * 0);
@@ -439,8 +439,20 @@
   .max-h-fit {
     max-height: fit-content;
   }
+  .min-h-2 {
+    min-height: calc(var(--spacing) * 2);
+  }
   .min-h-4 {
     min-height: calc(var(--spacing) * 4);
+  }
+  .min-h-10 {
+    min-height: calc(var(--spacing) * 10);
+  }
+  .min-h-24 {
+    min-height: calc(var(--spacing) * 24);
+  }
+  .min-h-28 {
+    min-height: calc(var(--spacing) * 28);
   }
   .w-2 {
     width: calc(var(--spacing) * 2);
@@ -450,9 +462,6 @@
   }
   .w-3 {
     width: calc(var(--spacing) * 3);
-  }
-  .w-3\.5 {
-    width: calc(var(--spacing) * 3.5);
   }
   .w-4 {
     width: calc(var(--spacing) * 4);
@@ -483,6 +492,9 @@
   }
   .w-64 {
     width: calc(var(--spacing) * 64);
+  }
+  .w-fit {
+    width: fit-content;
   }
   .w-full {
     width: 100%;
@@ -540,9 +552,6 @@
   }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-  }
-  .cursor-alias {
-    cursor: alias;
   }
   .cursor-not-allowed {
     cursor: not-allowed;
@@ -672,6 +681,9 @@
   }
   .overflow-y-auto {
     overflow-y: auto;
+  }
+  .overscroll-none {
+    overscroll-behavior: none;
   }
   .rounded {
     border-radius: 0.25rem;
@@ -825,9 +837,6 @@
   .bg-white {
     background-color: var(--color-white);
   }
-  .bg-yellow-300 {
-    background-color: var(--color-yellow-300);
-  }
   .bg-yellow-400 {
     background-color: var(--color-yellow-400);
   }
@@ -882,9 +891,6 @@
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
   }
-  .pt-0 {
-    padding-top: calc(var(--spacing) * 0);
-  }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
   }
@@ -900,9 +906,6 @@
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
   }
-  .pb-5 {
-    padding-bottom: calc(var(--spacing) * 5);
-  }
   .pl-1 {
     padding-left: calc(var(--spacing) * 1);
   }
@@ -912,14 +915,8 @@
   .pl-3 {
     padding-left: calc(var(--spacing) * 3);
   }
-  .pl-4 {
-    padding-left: calc(var(--spacing) * 4);
-  }
   .pl-5 {
     padding-left: calc(var(--spacing) * 5);
-  }
-  .pl-10 {
-    padding-left: calc(var(--spacing) * 10);
   }
   .text-center {
     text-align: center;
@@ -1556,11 +1553,6 @@
       color: var(--color-dark-primary-color);
     }
   }
-  .dark\:text-grey-four {
-    &:where(.dark, .dark *) {
-      color: var(--color-grey-four);
-    }
-  }
   .dark\:text-grey-seven {
     &:where(.dark, .dark *) {
       color: var(--color-grey-seven);
@@ -1569,11 +1561,6 @@
   .dark\:text-grey-six {
     &:where(.dark, .dark *) {
       color: var(--color-grey-six);
-    }
-  }
-  .dark\:text-grey-three {
-    &:where(.dark, .dark *) {
-      color: var(--color-grey-three);
     }
   }
   .dark\:text-grey-two {
@@ -1665,24 +1652,6 @@
       &:hover {
         @media (hover: hover) {
           color: var(--color-dark-primary-color);
-        }
-      }
-    }
-  }
-  .dark\:hover\:text-yellow-300 {
-    &:where(.dark, .dark *) {
-      &:hover {
-        @media (hover: hover) {
-          color: var(--color-yellow-300);
-        }
-      }
-    }
-  }
-  .dark\:hover\:text-yellow-400 {
-    &:where(.dark, .dark *) {
-      &:hover {
-        @media (hover: hover) {
-          color: var(--color-yellow-400);
         }
       }
     }
