--- a/src/output.css
+++ b/src/output.css
@@ -11,7 +11,6 @@
     --color-red-500: oklch(63.7% 0.237 25.331);
     --color-red-600: oklch(57.7% 0.245 27.325);
     --color-red-700: oklch(50.5% 0.213 27.518);
-    --color-yellow-300: oklch(90.5% 0.182 98.111);
     --color-yellow-400: oklch(85.2% 0.199 91.936);
     --color-cyan-50: oklch(98.4% 0.019 200.873);
     --color-gray-50: oklch(98.5% 0.002 247.839);
@@ -322,9 +321,6 @@
   .row-span-2 {
     grid-row: span 2 / span 2;
   }
-  .row-span-4 {
-    grid-row: span 4 / span 4;
-  }
   .m-0 {
     margin: calc(var(--spacing) * 0);
   }
@@ -369,6 +365,9 @@
   }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
+  }
+  .mb-3 {
+    margin-bottom: calc(var(--spacing) * 3);
   }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
@@ -439,17 +438,8 @@
   .max-h-fit {
     max-height: fit-content;
   }
-  .min-h-2 {
-    min-height: calc(var(--spacing) * 2);
-  }
   .min-h-4 {
     min-height: calc(var(--spacing) * 4);
-  }
-  .min-h-10 {
-    min-height: calc(var(--spacing) * 10);
-  }
-  .min-h-24 {
-    min-height: calc(var(--spacing) * 24);
   }
   .min-h-28 {
     min-height: calc(var(--spacing) * 28);
@@ -1310,6 +1300,11 @@
       font-size: 15px;
     }
   }
+  .lg\:col-span-1 {
+    @media (width >= 64rem) {
+      grid-column: span 1 / span 1;
+    }
+  }
   .lg\:mt-0 {
     @media (width >= 64rem) {
       margin-top: calc(var(--spacing) * 0);
@@ -1388,6 +1383,11 @@
   .xl\:col-span-5 {
     @media (width >= 80rem) {
       grid-column: span 5 / span 5;
+    }
+  }
+  .xl\:mt-0 {
+    @media (width >= 80rem) {
+      margin-top: calc(var(--spacing) * 0);
     }
   }
   .xl\:block {
