--- a/src/output.css
+++ b/src/output.css
@@ -360,14 +360,14 @@
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
   }
+  .mt-43 {
+    margin-top: calc(var(--spacing) * 43);
+  }
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
   }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
-  }
-  .mb-3 {
-    margin-bottom: calc(var(--spacing) * 3);
   }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
@@ -755,6 +755,9 @@
   .border-yellow-400 {
     border-color: var(--color-yellow-400);
   }
+  .border-t-grey-six {
+    border-top-color: var(--color-grey-six);
+  }
   .border-b-\[\#e8e7e7\] {
     border-bottom-color: #e8e7e7;
   }
@@ -793,6 +796,9 @@
   }
   .bg-blue-color {
     background-color: var(--color-blue-color);
+  }
+  .bg-dark-primary-color {
+    background-color: var(--color-dark-primary-color);
   }
   .bg-gray-50 {
     background-color: var(--color-gray-50);
@@ -886,6 +892,9 @@
   }
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
+  }
+  .pt-5 {
+    padding-top: calc(var(--spacing) * 5);
   }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
@@ -1261,6 +1270,13 @@
       }
     }
   }
+  .hover\:text-grey-two {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-grey-two);
+      }
+    }
+  }
   .hover\:text-primary-color {
     &:hover {
       @media (hover: hover) {
@@ -1470,6 +1486,11 @@
   .dark\:border-dark-primary-color {
     &:where(.dark, .dark *) {
       border-color: var(--color-dark-primary-color);
+    }
+  }
+  .dark\:border-t-dark-grey-six {
+    &:where(.dark, .dark *) {
+      border-top-color: var(--color-dark-grey-six);
     }
   }
   .dark\:border-b-dark-grey-six {
